--- a/inc/simpleNotifyStyle.css
+++ b/inc/simpleNotifyStyle.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   right: 0;
-  width: 310px;
+  width: min(350px, 90vw);
   height: auto;
   overflow-y: auto;
   overflow-x: hidden;
@@ -12,40 +12,43 @@
   max-height: 0px;
 
   /* Animation on creation */
-  -webkit-animation: pushDown 500ms forwards;
   animation: pushDown 500ms forwards;
 }
 
 .simple-notification {
   position: relative;
-  color: white; /* Default */
-  border: 1px solid transparent;
-  border-radius: 4px;
+  /* Default */
+  border-radius: 10px;
   padding: 15px;
   padding-right: 20px;
-  width: 300px;
-  opacity: 1;
+  width: min(300px, 90vw - 50px);
+  opacity: 0.8;
   margin-top: 10px;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   font-family: sans-serif;
 
   /* Animation on creation */
-  -webkit-animation:slideIn 500ms forwards;
   animation: slideIn 500ms forwards;
-  -webkit-animation-delay: 100ms;
   animation-delay: 100ms;
+
+  transition-property: opacity, transform;
+  transition-duration: 500ms;
+  transition-timing-function: ease-out;
+
+}
+
+.simple-notification:hover {
+  opacity: 1;
 }
 
 .simple-notification .close-notification {
   position: absolute;
-  width: 15px;
-  height: 15px;
+  width: 20px;
+  height: 20px;
   background-image: url("close-icon.svg");
   background-size: contain;
-  background-repeat: no-repeat;
-  top: 10px;
-  right: 10px;
-  font-size: 20px;
+  top: 15px;
+  right: 15px;
   color: #000;
   opacity: 0.3;
   cursor: pointer;
@@ -82,41 +85,19 @@
 /* Outro transition */
 .simple-notification.fade-out {
   opacity: 0;
-  transition: opacity 500ms ease-in-out;
-  -moz-transition: opacity 500ms ease-in-out;
-  -webkit-transition: opacity 500ms ease-in-out;
+  transform: translateX(100%);
 }
 
 
 /* CSS Animations */
 @keyframes slideIn {
-  100% { margin-left: 0px; }
-}
-
-@-webkit-keyframes slideIn {
-  100% { margin-left: 0px; }
-}
-
-@-moz-keyframes slideIn {
-  100% { margin-left: 0px; }
-}
-
-@-o-keyframes slideIn {
-  100% { margin-left: 0px; }
+  100% {
+    margin-left: 0px;
+  }
 }
 
 @keyframes pushDown {
-  100% { max-height: 200px; }
-}
-
-@-webkit-keyframes slideIn {
-  100% { max-height: 200px; }
-}
-
-@-moz-keyframes slideIn {
-  100% { max-height: 200px; }
-}
-
-@-o-keyframes slideIn {
-  100% { max-height: 200px; }
+  100% {
+    max-height: 200px;
+  }
 }
